log
Tue 22 Aug 2023 10:30:20 PM UTC: 
 tests:  0|6
total_score: 0/70
d93413d
Tue 22 Aug 2023 10:35:41 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:47: error: ‘structList’ undeclared (first use in this function)
   32 |   List* newList = (struct List*)malloc(sizeof(structList));
      |                                               ^~~~~~~~~~
list.c:32:47: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7c76590
Tue 22 Aug 2023 10:36:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
080773f
Tue 22 Aug 2023 10:37:34 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:12: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   38 |     return newList;
      |            ^~~~~~~
      |            nextList
list.c:38:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6ab646f
Tue 22 Aug 2023 10:37:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3a31074
Tue 22 Aug 2023 10:38:08 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
6c5dc94
Tue 22 Aug 2023 10:38:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7466f0e
